fix long url wrap thingy

--- a/source/stylesheets/quiz-generator.css
+++ b/source/stylesheets/quiz-generator.css
@@ -42,6 +42,7 @@ input[type=radio]:not(:first-child) {
 
 .try {
 	font-size: 12px;
+	word-wrap: break-word;
 }
 
 span.link {
